--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mocha": "^6.2.1",
     "nock": "^11.4.0",
     "nyc": "^14.1.1",
+    "rewire": "^4.0.1",
     "sinon": "^7.5.0",
     "stryker": "^0.35.1"
   },
