--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@nui/adobe-io-events-client": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
-    "tmp": "^0.1.0"
+    "tmp": "^0.1.0",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@nui/eslint-config": "^1.0.3",
