--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nui/adobe-io-events-client": "^1.0.3",
+    "@nui/openwhisk-newrelic": "0.0.3",
     "ajv": "^5.0.0",
     "clone": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
