--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://git.corp.adobe.com/nui/asset-compute-commons.git"
   },
   "dependencies": {
-    "@nui/adobe-io-events-client": "^1.2.0",
+    "@nui/adobe-io-events-client": "^1.3.0",
     "@nui/openwhisk-newrelic": "^1.0.5",
     "ajv": "^5.5.2",
     "clone": "^2.1.2",
@@ -29,16 +29,17 @@
     "@stryker-mutator/mocha-framework": "^2.4.0",
     "@stryker-mutator/mocha-runner": "^2.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^6.2.2",
-    "nock": "^11.7.0",
-    "nyc": "^14.1.1",
+    "lockfile-lint": "^3.0.5",
+    "mocha": "^7.0.0",
+    "nock": "^11.7.2",
+    "nyc": "^15.0.0",
     "rewire": "^4.0.1",
-    "sinon": "^7.5.0",
+    "sinon": "^8.0.4",
     "stryker": "^0.35.1",
     "stryker-api": "^0.24.1"
   },
   "scripts": {
-    "pretest": "eslint ./",
+    "pretest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --validate-https --empty-hostname false",
     "test": "nyc --reporter=html --reporter=text mocha ./test/*"
   }
 }
