--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "stryker-api": "^0.24.1"
   },
   "scripts": {
-    "pretest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --validate-https --empty-hostname false",
+    "pretest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
     "test": "nyc --reporter=html --reporter=text mocha ./test/*"
   }
 }
