--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,7 @@ jobs:
                   ./download-artifacts
               fi
               docker login docker-project-nui-snapshot.dr.corp.adobe.com -u $ARTIFACTORY_USER -p $ARTIFACTORY_TOKEN
+              docker login docker-senseiwins-release.dr-uw2.adobeitc.com -u $ARTIFACTORY_UW2_USER -p $ARTIFACTORY_UW2_TOKEN
               export DOCKER_REGISTRY=docker-senseiwins-release.dr-uw2.adobeitc.com/
               if [ -f "docker-compose.yml" ]; then
                 docker-compose build runtime
