no-release: [ci skip] update circleci config to match common_config (#67)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,7 +315,7 @@ jobs:
 
   deploy_app:
     docker:
-      - image: circleci/node:12.0.0
+      - image: circleci/node:12.16.1
     steps:  
       - checkout
       - *ssh_keys
@@ -384,7 +384,7 @@ jobs:
 
   integration_tests:
       docker:
-      - image: circleci/node:12.0.0
+      - image: circleci/node:12.16.1
         environment:
           AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
           AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
@@ -411,6 +411,126 @@ jobs:
               npm test
               echo "Integration test running against $NUI_URL"
 
+
+  release:
+    docker:
+      - image: circleci/node:12.16.1
+    steps:
+      - checkout
+      - *ssh_keys
+      - *artifactory_login
+      - run:
+          name: Releasing module - npm publish and create git tags
+          command: |
+            echo "Getting ready to release!!"
+            currentVersion="$(git describe --tags)";
+            cd ~
+            git clone git@git.corp.adobe.com:nui/circleci.git
+            cd circleci
+            git pull
+            ls
+            dest="/home/circleci/project/"
+            cd ~/project/
+            # check for "action" folder
+            if [ -d "action" ]; then
+                cd action
+                dest="/home/circleci/project/action/"
+            fi
+            cp ~/circleci/.releaserc.json $dest/
+            sleep 2
+            git status
+            npm install
+            npm install --no-save semantic-release
+            npm install --no-save conventional-changelog-eslint
+            npx semantic-release --debug
+            cat package.json
+            git status
+            newVersion="$(git describe --tags)"
+            echo "currentVersion -> $currentVersion & newVersion -> $newVersion"
+            versionChanged=true
+            if [ "$currentVersion" = "$newVersion" ]; then
+              versionChanged=false
+            fi
+            # pass along VERSION_CHANGED to next job
+            mkdir -p ~/tmpDir
+            echo "export VERSION_CHANGED=$versionChanged" >> ~/tmpDir/env-vars
+            cat ~/tmpDir/env-vars
+            # update README.md
+            # find readme to update
+            if [ "$versionChanged" = "true" ]; then
+              cd ~/project
+              newVersion="${newVersion:1}"
+              git config --global user.email "nuicid@adobe.com"
+              git config --global user.name "nuicid"
+              git stash save
+              if [ -e README.md ]; then
+                  readme=README.md
+              fi
+              # update and commit readme badge
+              if [ -n "$readme" ]; then
+                  echo "updating version badge in $readme";
+                  sed -i -E \
+                      -e "s|(img.shields.io/badge/.*)-([0-9]+\.[0-9]+\.[0-9]+)-blue\.svg|\1-${newVersion}-blue.svg|" \
+                      -e "s|(img.shields.io/badge/.*)-([0-9]+\.[0-9]+\.[0-9]+)\.tgz|\1-${newVersion}.tgz|" \
+                      "$readme" && echo "updated Readme.md"
+                  git add "$readme"
+                  git status
+                  git diff
+                  git commit -m "[ci skip] badge in README.md to $newVersion"
+                  git push origin master
+              fi
+              ### preDependentVersionUpdate
+              cd ~
+              mkdir appLatest && cd appLatest && mkdir bridgeDir && cd bridgeDir
+              #~/appLatest/bridgeDir/app
+              git clone git@git.corp.adobe.com:nui/app.git
+              cd app
+              npm install
+              #~/ci-dependency-it
+              cd ~
+              git clone git@git.corp.adobe.com:nui/ci-dependency-it.git
+              cd ci-dependency-it
+              npm install
+              node ~/ci-dependency-it/preDependentVersionUpdate-app.js "@nui/$CIRCLE_PROJECT_REPONAME" "/home/circleci/" "project/"
+            fi
+      - persist_to_workspace:
+          root: ~/tmpDir
+          paths:
+            - env-vars
+
+  dependent-version-update:
+    docker:
+      - image: circleci/node:12.16.1
+    steps:
+      - checkout
+      - *ssh_keys
+      - *artifactory_login
+      - attach_workspace:
+          at: tmpDir
+      - run: cat tmpDir/env-vars >> $BASH_ENV
+      - run:
+          name: Create PR for dependent repos to update version
+          command: |
+            # if no-release
+            echo "VERSION_CHANGED -> $VERSION_CHANGED"
+            if [ "$VERSION_CHANGED" = "true" ]; then
+              cd ~
+              git clone git@git.corp.adobe.com:nui/circleci.git
+              cd circleci
+              cd ~
+              mkdir appLatest && cd appLatest && mkdir bridgeDir && cd bridgeDir
+              #~/appLatest/bridgeDir/app
+              git clone git@git.corp.adobe.com:nui/app.git
+              cd app
+              npm install
+              #~/ci-dependency-it
+              cd ~
+              git clone git@git.corp.adobe.com:nui/ci-dependency-it.git
+              cd ci-dependency-it
+              npm install
+              node ~/ci-dependency-it/release-app.js "@nui/$CIRCLE_PROJECT_REPONAME" "/home/circleci/" "project/"
+            fi
+              
   validate_config:
     working_directory: ~/validate
     docker:
@@ -453,6 +573,22 @@ workflows:
         - integration_tests:
             requires:
               - deploy_app
+            context: nui
+        - release:
+            requires:
+              - build_runtime
+              - build
+            filters:
+              branches:
+                only: master
+            context: nui
+        - hold-dependent-version-update:
+            type: approval # requires that an in-app button be clicked by an appropriate member of the project to continue.
+            requires:
+              - release
+        - dependent-version-update:
+            requires:
+              - hold-dependent-version-update
             context: nui
 #        - validate_config:
 #            context: nui
