--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@nui/adobe-io-events-client": "^1.3.0",
-    "@nui/openwhisk-newrelic": "^1.2.1",
+    "@nui/openwhisk-newrelic": "^2.0.0",
     "ajv": "^5.5.2",
     "clone": "^2.1.2",
     "tmp": "^0.1.0",
@@ -23,8 +23,8 @@
   },
   "devDependencies": {
     "@nui/eslint-config": "^1.0.4",
-    "@stryker-mutator/core": "^2.5.0",
-    "@stryker-mutator/html-reporter": "^2.5.0",
+    "@stryker-mutator/core": "^3.0.2",
+    "@stryker-mutator/html-reporter": "^3.0.2",
     "@stryker-mutator/javascript-mutator": "^2.5.0",
     "@stryker-mutator/mocha-framework": "^2.5.0",
     "@stryker-mutator/mocha-runner": "^2.5.0",
@@ -41,5 +41,8 @@
   "scripts": {
     "posttest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
     "test": "nyc --reporter=html --reporter=text mocha ./test/*"
+  },
+  "mocha": {
+    "file": "test/logfile.setup.js"
   }
 }
