--- a/.npmignore
+++ b/.npmignore
@@ -4,14 +4,20 @@ coverage
 .nyc_output
 test/
 .circleci
+.travis.yml
 Jenkinsfile
 .eslintrc.js
 .eslintignore
 stryker.conf.js
-reports
+build/
 
 # npm pack leftovers
 *.tgz
+
+# git stuff
+.github/CONTRIBUTING.md
+.github/ISSUE_TEMPLATE.md
+.github/PULL_REQUEST_TEMPLATE.md
 
 # pipeline release config
 .releaserc.json
