--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@nui/asset-compute-commons",
+  "description": "Common utilities needed by all Adobe Asset Compute serverless actions",
+  "license": "Apache-2.0",
   "version": "14.0.0",
   "main": "index.js",
-  "description": "Common utilities needed by all Asset Compute serverless actions",
   "author": {
-    "name": "Adobe Systems Inc."
+    "name": "Adobe Inc."
   },
   "publishConfig": {
     "registry": "https://artifactory.corp.adobe.com/artifactory/api/npm/npm-nui-release-local"
@@ -14,7 +15,7 @@
     "url": "https://git.corp.adobe.com/nui/asset-compute-commons.git"
   },
   "dependencies": {
-    "@nui/adobe-io-events-client": "^5.0.0",
+    "@adobe/asset-compute-events-client": "^1.0.0",
     "@nui/openwhisk-newrelic": "^10.0.0",
     "ajv": "^5.5.2",
     "clone": "^2.1.2",
@@ -38,6 +39,13 @@
     "stryker": "^0.35.1",
     "stryker-api": "^0.24.1"
   },
+  "keywords": [
+    "scripts",
+    "openwhisk",
+    "asset compute",
+    "library",
+    "adobe"
+  ],
   "scripts": {
     "posttest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
     "test": "nyc --reporter=html --reporter=text mocha ./test/*"
