--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
   ],
   "scripts": {
     "posttest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
-    "test": "nyc --reporter=html --reporter=text mocha ./test/*",
-    "dep-license-details": "license-checker -unknown --out dependencies-licenses.log",
-    "dep-license-list": "license-checker --summary -unknown"
+    "test": "nyc --reporter=html --reporter=text mocha ./test/*"
   },
   "mocha": {
     "file": "test/logfile.setup.js"
