--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@stryker-mutator/javascript-mutator": "^3.1.0",
     "@stryker-mutator/mocha-framework": "^3.1.0",
     "@stryker-mutator/mocha-runner": "^3.1.0",
+    "cross-os": "^1.3.0",
     "jsonwebtoken": "^8.5.1",
     "lockfile-lint": "^4.2.2",
     "mocha": "^7.1.2",
@@ -41,8 +42,20 @@
     "adobe"
   ],
   "scripts": {
-    "posttest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
-    "test": "nyc --reporter=html --reporter=text mocha ./test/*"
+    "posttest": "cross-os posttest-cross-os",
+    "test": "cross-os test-cross-os"
+  },
+  "cross-os": {
+    "posttest-cross-os": {
+      "darwin": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
+      "linux": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
+      "win32": "eslint && node_modules\\lockfile-lint\\bin\\lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true"
+    },
+    "test-cross-os": {
+      "darwin": "nyc --reporter=html --reporter=text mocha ./test/*",
+      "linux": "nyc --reporter=html --reporter=text mocha ./test/*",
+      "win32": "nyc --reporter=html --reporter=text mocha test/*"
+    }
   },
   "mocha": {
     "file": "test/logfile.setup.js"
