--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "posttest-cross-os": {
       "darwin": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
       "linux": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
-      "win32": "eslint ../ && node_modules\\lockfile-lint\\bin\\lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true"
+      "win32": "tasklist && eslint ../ && node_modules\\lockfile-lint\\bin\\lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true"
     }
   },
   "mocha": {
