--- a/package.json
+++ b/package.json
@@ -42,16 +42,10 @@
     "adobe"
   ],
   "scripts": {
-    "pretest": "cross-os pretest-cross-os",
     "test": "cross-os test-cross-os",
     "posttest": "cross-os posttest-cross-os"
   },
   "cross-os": {
-      "pretest-cross-os": {
-        "darwin": "echo $YARN_GPG",
-        "linux": "echo $YARN_GPG",
-        "win32": "echo %YARN_GPG%"
-      },
     "test-cross-os": {
       "darwin": "nyc --reporter=html --reporter=text mocha ./test/*",
       "linux": "nyc --reporter=html --reporter=text mocha ./test/*",
@@ -60,8 +54,8 @@
     "posttest-cross-os": {
       "darwin": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
       "linux": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
-      "win32": "tasklist && taskkill /IM \"sh.exe\" /F && taskkill /IM \"node.exe\" /F && echo DONE && eslint ../ && node_modules\\lockfile-lint\\bin\\lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true"
-    }
+      "win32": taskkill /IM \"sh.exe\" /F && eslint ../ && node_modules\\lockfile-lint\\bin\\lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true"
+    },
   },
   "mocha": {
     "file": "test/logfile.setup.js"
