--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@stryker-mutator/javascript-mutator": "^3.1.0",
     "@stryker-mutator/mocha-framework": "^3.1.0",
     "@stryker-mutator/mocha-runner": "^3.1.0",
+    "codecov": "^3.7.0",
     "jsonwebtoken": "^8.5.1",
     "lockfile-lint": "^4.2.2",
     "mocha": "^7.1.2",
@@ -42,7 +43,7 @@
   ],
   "scripts": {
     "posttest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
-    "test": "nyc --reporter=html --reporter=text mocha ./test/*"
+    "test": "nyc mocha --recursive --exit"
   },
   "mocha": {
     "file": "test/logfile.setup.js"
