NUI-552 [Travis] All Action Code Open Source Repos Should Only be Tested on Linux (#10)
Modified Travis to run only on Linux
Added code coverage reporting
Simplified script `test`
Added script beautify

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,6 @@
 # governing permissions and limitations under the License.
 
 language: node_js
-os:
-  - linux
-  - osx
 
 node_js:
   - "10"
@@ -23,5 +20,9 @@ node_js:
 install:
   - npm version
   - npm install
+
 script:
   - npm test
+
+after_success:
+  - npm run report-coverage
