--- a/.travis.yml
+++ b/.travis.yml
@@ -8,28 +8,34 @@
 # OF ANY KIND, either express or implied. See the License for the specific language
 # governing permissions and limitations under the License.
 
+language: node_js
+os:
+  - linux
+  - osx
+
+node_js:
+  - "10"
+  - "10.15"
+  - "10.19"
+  - "12"
+  - "14"
+
+install:
+  - npm version
+  - npm install
+  - npm install license-checker
+
 jobs:
   include:
     - stage: "Tests"                
-      name: "Run unit tests"   
-      language: node_js
-      os:
-        - linux
-        - osx
-      node_js:
-        - "10"
-        - "10.15"
-        - "10.19"
-        - "12"
-        - "14"
-      install:
-        - npm version
-        - npm install         
+      name: "Run unit tests"        
       script: npm test
     - stage: "Post-test"
-      name: "Get license information"
-      install: npm install license-checker
-      script: license-checker
+      name: "Get license information for dependencies"
+      script: license-checker --production --summary
+    - stage: "Post-test: dev dependencies"
+      name: "Get license information for dev dependencies"
+      script: license-checker --development --summary
 
 after_success:
   - npm run report-coverage
