Run license check only once

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,11 @@ install:
   - npm install
   - npm install license-checker
 
-script:
-  - npm test
-  - license-checker --summary
+jobs:
+  include:
+    - stage: "Post-test"
+      name: "Get license information for dependencies"
+      script: license-checker --summary
 
 after_success:
   - npm run report-coverage
