--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
   },
   "devDependencies": {
     "@adobe/eslint-config-asset-compute": "^1.3.0",
-    "@stryker-mutator/core": "^3.1.0",
+    "@stryker-mutator/core": "^3.2.4",
     "@stryker-mutator/html-reporter": "^3.1.0",
-    "@stryker-mutator/javascript-mutator": "^3.1.0",
-    "@stryker-mutator/mocha-framework": "^3.1.0",
-    "@stryker-mutator/mocha-runner": "^3.1.0",
+    "@stryker-mutator/javascript-mutator": "^3.2.4",
+    "@stryker-mutator/mocha-framework": "^3.2.4",
+    "@stryker-mutator/mocha-runner": "^3.2.4",
     "codecov": "^3.7.0",
     "jsonwebtoken": "^8.5.1",
-    "lockfile-lint": "^4.2.2",
-    "mocha": "^7.1.2",
+    "license-checker": "^25.0.1",
+    "lockfile-lint": "^4.3.6",
+    "mocha": "^7.2.0",
     "nock": "^12.0.3",
-    "nyc": "^15.0.1",
+    "nyc": "^15.1.0",
     "rewire": "^5.0.0",
     "sinon": "^9.0.2",
     "stryker": "^0.35.1",
@@ -42,7 +43,7 @@
     "adobe"
   ],
   "scripts": {
-    "posttest": "eslint ./ && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
+    "posttest": "eslint ./ && license-checker --summary && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
     "test": "nyc mocha --recursive --exit",
     "beautify": "eslint ./ --fix"
   },
