--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
   ],
   "scripts": {
     "posttest": "eslint ./ && license-checker --summary && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
-    "test": "nyc mocha --recursive --exit",
-    "beautify": "eslint ./ --fix"
+    "test": "nyc mocha --recursive --exit"
   },
   "mocha": {
     "file": "test/logfile.setup.js"
