--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "devDependencies": {
     "@adobe/eslint-config-asset-compute": "^1.3.0",
+    "@semantic-release/git": "^9.0.0",
     "@stryker-mutator/core": "^3.2.4",
     "@stryker-mutator/html-reporter": "^3.1.0",
     "@stryker-mutator/javascript-mutator": "^3.2.4",
     "@stryker-mutator/mocha-framework": "^3.2.4",
     "@stryker-mutator/mocha-runner": "^3.2.4",
     "codecov": "^3.7.0",
+    "conventional-changelog-eslint": "^3.0.8",
     "jsonwebtoken": "^8.5.1",
     "license-checker": "^25.0.1",
     "lockfile-lint": "^4.3.6",
@@ -31,6 +33,7 @@
     "nock": "^12.0.3",
     "nyc": "^15.1.0",
     "rewire": "^5.0.0",
+    "semantic-release": "^17.1.1",
     "sinon": "^9.0.2",
     "stryker": "^0.35.1",
     "stryker-api": "^0.24.1"
