--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "scripts": {
     "posttest": "eslint ./ && license-checker --summary && ./node_modules/lockfile-lint/bin/lockfile-lint.js --path package-lock.json —type npm --allowed-hosts npm artifactory.corp.adobe.com --allowed-schemes \"https:\" \"file:\" --empty-hostname true",
     "test": "nyc mocha --recursive --exit",
-    "beautify": "eslint ./ --fix"
+    "beautify": "eslint ./ --fix",
+    "semantic-release": "semantic-release"
   },
   "mocha": {
     "file": "test/logfile.setup.js"
