--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": "adobe/asset-compute-commons",
   "dependencies": {
     "@adobe/asset-compute-events-client": "^1.1.2",
-    "@adobe/openwhisk-newrelic": "^1.0.8",
+    "@adobe/openwhisk-newrelic": "git+https://github.com/adobe/node-openwhisk-newrelic.git#debug",
     "clone": "^2.1.2",
     "tmp": "^0.2.1",
     "valid-url": "^1.0.9"
