--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     strategy:
       matrix:
-        node-version: [10.16, 10.19, 12.16, 12.19]
+        node-version: [10.16, 10.19, 12.16, 12.19, 14.17]
 
     steps:
     - uses: actions/checkout@v2
@@ -41,10 +41,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - name: Use Node.js 12.19
+      - name: Use Node.js 14.17
         uses: actions/setup-node@v1
         with:
-          node-version: '12.19'
+          node-version: '14.17'
       - run: npm install
       - run: npm run semantic-release
         env:
